--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "automation testing for checkout api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
   },
   "author": "Juan Carlos Zarate",
   "license": "ISC",
